Create Android Studio project

--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,33 @@
 # Gradle files
+.gradle
 .gradle/
 build/
+/build
 
 # Local configuration file (sdk path, etc)
 local.properties
+/local.properties
 
 # Log/OS Files
 *.log
 
 # Android Studio generated files and folders
 captures/
+/captures
+.externalNativeBuild
 .externalNativeBuild/
+.cxx
 .cxx/
 *.apk
 output.json
 
+# Some Android Studio auto-generated thing
+.DS_Store
+
 # IntelliJ
 *.iml
 .idea/
+/.idea/
 misc.xml
 deploymentTargetDropDown.xml
 render.experimental.xml
@@ -25,6 +35,7 @@ render.experimental.xml
 # Keystore files
 *.jks
 *.keystore
+*.keystores
 
 # Google Services (e.g. APIs or Firebase)
 google-services.json
