--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
 agp = "8.3.1"
 hiltAndroid = "2.44"
-kotlin = "1.9.20"
+kotlin = "1.9.0"
 coreKtx = "1.12.0"
 junit = "4.13.2"
 junitVersion = "1.1.5"
@@ -10,7 +10,8 @@ lifecycleRuntimeKtx = "2.7.0"
 activityCompose = "1.8.2"
 composeBom = "2024.04.00"
 room = "2.6.1"
-devtoolsKsp = "1.8.21-1.0.11"
+devtoolsKsp = "1.9.0-1.0.13"
+#devtoolsKsp = "1.8.21-1.0.11"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
