--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,6 +18,7 @@ lifecycleRuntimeCompose = "2.8.4"
 coil = "2.6.0"
 zoomable = "1.6.1"
 material = "1.6.8"
+material3 = "1.3.0-beta05" #stable = "1.2.1"
 datastore = "1.1.1"
 
 [libraries]
@@ -36,7 +37,7 @@ androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-toolin
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material = { group = "androidx.compose.material", name = "material", version.ref = "material" }
-androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
+androidx-material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "material3" }
 androidx-compose-runtime = { group = "androidx.compose.runtime", name = "runtime", version.ref = "composeRuntime" }
 androidx-compose-runtime-livedata = { group = "androidx.compose.runtime", name = "runtime-livedata", version.ref = "composeRuntime" }
 androidx-compose-runtime-rxjava = { group = "androidx.compose.runtime", name = "runtime-rxjava2", version.ref = "composeRuntime" }
