--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,7 +8,7 @@ junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 lifecycleRuntimeKtx = "2.8.4"
 activityCompose = "1.9.1"
-composeBom = "2024.06.00"
+composeBom = "2024.08.00"
 composeRuntime = "1.6.8"
 room = "2.6.1"
 devtoolsKsp = "1.9.20-1.0.14"
@@ -18,7 +18,7 @@ lifecycleRuntimeCompose = "2.8.4"
 coil = "2.6.0"
 zoomable = "1.6.1"
 material = "1.6.8"
-material3 = "1.3.0-beta05" #stable = "1.2.1"
+material3 = "1.3.0-rc01"
 datastore = "1.1.1"
 
 [libraries]
