--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,24 +1,24 @@
 [versions]
-agp = "8.5.2"
+agp = "8.6.0"
 hiltAndroid = "2.51.1"
 kotlin = "1.9.20"
 coreKtx = "1.13.1"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
-lifecycleRuntimeKtx = "2.8.4"
-activityCompose = "1.9.1"
-composeBom = "2024.08.00"
-composeRuntime = "1.6.8"
+lifecycleRuntimeKtx = "2.8.5"
+activityCompose = "1.9.2"
+composeBom = "2024.09.00"
+composeRuntime = "1.7.0"
 room = "2.6.1"
 devtoolsKsp = "1.9.20-1.0.14"
-navigation = "2.7.7"
+navigation = "2.8.0"
 hiltNavigation = "1.2.0"
-lifecycleRuntimeCompose = "2.8.4"
+lifecycleRuntimeCompose = "2.8.5"
 coil = "2.6.0"
 zoomable = "1.6.1"
-material = "1.6.8"
-material3 = "1.3.0-rc01"
+material = "1.7.0"
+material3 = "1.3.0"
 datastore = "1.1.1"
 
 [libraries]
