--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-agp = "8.8.1"
+agp = "8.8.2"
 hiltAndroid = "2.51.1"
 kotlin = "1.9.21"
 kotlinxSerialization = "1.6.1"
@@ -13,14 +13,15 @@ composeBom = "2024.12.01"
 composeRuntime = "1.7.6"
 room = "2.6.1"
 devtoolsKsp = "1.9.21-1.0.16"
-navigation = "2.8.7"
+navigation = "2.8.8"
 hiltNavigation = "1.2.0"
 lifecycleRuntimeCompose = "2.8.7"
 coil = "2.6.0"
 zoomable = "1.6.1"
 material3 = "1.3.1"
-datastore = "1.1.2"
+datastore = "1.1.3"
 appcompat = "1.7.0"
+opencsv = "5.10"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -59,6 +60,7 @@ room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
 androidx-lifecycle-runtime-compose = { group = "androidx.lifecycle", name = "lifecycle-runtime-compose", version.ref = "lifecycleRuntimeCompose" }
 coil-compose = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil" }
 usuiat-zoomable = { group = "net.engawapg.lib", name = "zoomable", version.ref = "zoomable" }
+opencsv-core = { group = "com.opencsv", name = "opencsv", version.ref = "opencsv" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
