--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,7 +13,8 @@ composeBom = "2024.12.01"
 composeRuntime = "1.7.6"
 room = "2.6.1"
 devtoolsKsp = "1.9.21-1.0.16"
-navigation = "2.8.8"
+navigation = "2.8.9"
+palette = "1.0.0"
 hiltNavigation = "1.2.0"
 lifecycleRuntimeCompose = "2.8.7"
 coil = "2.7.0"
@@ -47,6 +48,7 @@ androidx-navigation-ui-ktx = { group = "androidx.navigation", name = "navigation
 androidx-navigation-dff = { group = "androidx.navigation", name = "navigation-dynamic-features-fragment", version.ref = "navigation" }
 androidx-navigation-testing = { group = "androidx.navigation", name = "navigation-testing", version.ref = "navigation" }
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigation" }
+androidx-palette = { group = "androidx.palette", name = "palette", version.ref = "palette" }
 androidx-datastore-preferences = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "datastore" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 androidx-appcompat-resources = { group = "androidx.appcompat", name = "appcompat-resources", version.ref = "appcompat" }
