--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,6 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.CollectionCatalog">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,7 +29,7 @@
             android:enabled="false"
             android:exported="false">
             <meta-data
-                android:name="autoStoreLoacles"
+                android:name="autoStoreLocales"
                 android:value="true" />
         </service>
     </application>
