--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,9 +1,9 @@
 [versions]
 agp = "8.11.0"
-hiltAndroid = "2.51.1"
-kotlin = "1.9.21"
-kotlinxSerialization = "1.6.1"
-coreKtx = "1.13.1"
+hiltAndroid = "2.56.2"
+kotlin = "2.1.21"
+kotlinxSerialization = "1.8.1"
+coreKtx = "1.16.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
@@ -11,14 +11,14 @@ lifecycleRuntimeKtx = "2.9.1"
 activityCompose = "1.10.1"
 composeBom = "2025.06.01"
 composeRuntime = "1.8.3"
-room = "2.6.1"
-devtoolsKsp = "1.9.21-1.0.16"
+room = "2.7.2"
+devtoolsKsp = "2.1.21-2.0.2"
 navigation = "2.9.0"
 palette = "1.0.0"
 hiltNavigation = "1.2.0"
 lifecycleRuntimeCompose = "2.9.1"
 coil = "2.7.0"
-zoomable = "1.6.1"
+zoomable = "2.8.0"
 material3 = "1.3.2"
 datastore = "1.1.4"
 appcompat = "1.7.1"
@@ -69,5 +69,6 @@ androidApplication = { id = "com.android.application", version.ref = "agp" }
 jetbrainsKotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 jetbrainsKotlinKapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
 jetbrainsKotlinSerialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
+jetbrainsKotlinComposeCompiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 hiltAndroid = { id = "com.google.dagger.hilt.android", version.ref = "hiltAndroid" }
 devtoolsKsp = { id = "com.google.devtools.ksp", version.ref = "devtoolsKsp" }
