--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
 agp = "8.13.0"
 hiltAndroid = "2.57.1"
-kotlin = "2.2.10"
+kotlin = "2.2.20"
 kotlinxSerialization = "1.9.0"
 coreKtx = "1.17.0"
 coreSplash = "1.0.1"
@@ -9,14 +9,14 @@ junit = "4.13.2"
 junitVersion = "1.3.0"
 espressoCore = "3.7.0"
 lifecycleRuntimeKtx = "2.9.3"
-activityCompose = "1.10.1"
-composeBom = "2025.08.01"
-composeRuntime = "1.9.0"
-room = "2.7.2"
+activityCompose = "1.11.0"
+composeBom = "2025.09.00"
+composeRuntime = "1.9.1"
+room = "2.8.0"
 devtoolsKsp = "2.1.21-2.0.2"
-navigation = "2.9.3"
+navigation = "2.9.4"
 palette = "1.0.0"
-hiltNavigation = "1.2.0"
+hiltNavigation = "1.3.0"
 lifecycleRuntimeCompose = "2.9.3"
 coil = "2.7.0"
 zoomable = "2.8.1"
@@ -25,6 +25,7 @@ material3 = "1.3.2"
 datastore = "1.1.4"
 appcompat = "1.7.1"
 opencsv = "5.12.0"
+roomKtx = "2.8.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -67,6 +68,7 @@ androidx-lifecycle-runtime-compose = { group = "androidx.lifecycle", name = "lif
 coil-compose = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil" }
 usuiat-zoomable = { group = "net.engawapg.lib", name = "zoomable", version.ref = "zoomable" }
 opencsv-core = { group = "com.opencsv", name = "opencsv", version.ref = "opencsv" }
+androidx-room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "roomKtx" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
