--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
-agp = "8.13.2"
-hiltAndroid = "2.57.2"
+agp = "9.0.0"
+hiltAndroid = "2.58"
 kotlin = "2.2.21"
 kotlinxSerialization = "1.9.0"
 coreKtx = "1.17.0"
@@ -10,10 +10,10 @@ junitVersion = "1.3.0"
 espressoCore = "3.7.0"
 lifecycleRuntimeKtx = "2.10.0"
 activityCompose = "1.12.2"
-composeBom = "2025.12.01"
-composeRuntime = "1.10.0"
+composeBom = "2026.01.00"
+composeRuntime = "1.10.1"
 room = "2.8.4"
-devtoolsKsp = "2.2.20-2.0.3"
+devtoolsKsp = "2.3.2"
 navigation = "2.9.6"
 palette = "1.0.0"
 hiltNavigation = "1.3.0"
